--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
             transition: opacity 0.2s;
         }
         .code-block:hover .copy-btn { opacity: 1; }
+        /* Style for the new comparison table */
+        .comparison-table td:nth-child(2) {
+            color: #4ade80; /* Green for Script 1 */
+            font-weight: 600;
+        }
+        .comparison-table td:nth-child(3) {
+            color: #f87171; /* Red/Error for Script 2 */
+            font-weight: 600;
+        }
     </style>
 </head>
 <body class="antialiased">
@@ -92,8 +101,9 @@
 
     <section id="comparison" class="py-16 bg-slate-900/50">
         <div class="max-w-6xl mx-auto px-4">
-            <h2 class="text-3xl font-bold text-center mb-12">Pilih Script Anda</h2>
-            <div class="grid md:grid-cols-2 gap-8">
+            <h2 class="text-3xl font-bold text-center mb-12"><i class="fa-solid fa-scale-balanced text-blue-500 mr-2"></i> Analisis Pool: Pilih Script Anda</h2>
+            
+            <div class="grid md:grid-cols-2 gap-8 mb-12">
                 <div class="bg-slate-800/50 rounded-2xl p-8 border border-green-500/30 hover:border-green-500 transition shadow-lg">
                     <div class="flex items-center gap-3 mb-6">
                         <i class="fa-solid fa-bolt text-green-400 text-3xl"></i>
@@ -118,7 +128,57 @@
                     </ul>
                 </div>
             </div>
-        </div>
+
+            <h3 class="text-2xl font-bold text-white text-center mb-6 border-b border-slate-700 pb-3">📈 Hasil Uji Coba Lapangan</h3>
+            <div class="bg-slate-800 rounded-lg overflow-x-auto shadow-xl">
+                <table class="w-full text-left comparison-table divide-y divide-slate-700">
+                    <thead class="bg-slate-700/50">
+                        <tr>
+                            <th class="px-4 py-3 font-semibold text-slate-300">Aspek</th>
+                            <th class="px-4 py-3 font-semibold text-slate-300">Script 1 (Code-Server)</th>
+                            <th class="px-4 py-3 font-semibold text-slate-300">Script 2 (Build Source)</th>
+                        </tr>
+                    </thead>
+                    <tbody class="divide-y divide-slate-700">
+                        <tr>
+                            <td class="px-4 py-3">Success Rate</td>
+                            <td class="px-4 py-3">✅ 100%</td>
+                            <td class="px-4 py-3">❌ 0% (3 failures)</td>
+                        </tr>
+                        <tr>
+                            <td class="px-4 py-3">Install Time</td>
+                            <td class="px-4 py-3">⚡ 5 menit</td>
+                            <td class="px-4 py-3">⏳ 2+ jam (with debugging)</td>
+                        </tr>
+                        <tr>
+                            <td class="px-4 py-3">Error Count</td>
+                            <td class="px-4 py-3">0</td>
+                            <td class="px-4 py-3">3+ (masih counting...)</td>
+                        </tr>
+                        <tr>
+                            <td class="px-4 py-3">Copilot</td>
+                            <td class="px-4 py-3">✅ WORKS</td>
+                            <td class="px-4 py-3">❓ Unknown (never succeeded)</td>
+                        </tr>
+                        <tr>
+                            <td class="px-4 py-3">Marketplace</td>
+                            <td class="px-4 py-3">✅ WORKS</td>
+                            <td class="px-4 py-3">❓ Unknown</td>
+                        </tr>
+                        <tr>
+                            <td class="px-4 py-3">Maintenance</td>
+                            <td class="px-4 py-3">✅ Easy</td>
+                            <td class="px-4 py-3">❌ Nightmare</td>
+                        </tr>
+                        <tr>
+                            <td class="px-4 py-3">Result</td>
+                            <td class="px-4 py-3">✅ Production ready</td>
+                            <td class="px-4 py-3">❌ Still broken</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            </div>
     </section>
 
     <section id="install" class="py-16">
